2009-04-15  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=25204
        Create a fast path for ReplaceSelectionCommand that merges text nodes
        
        During simple pastes, where we're just pasting a text node into a run of text, we would split the current
        text and insert the new node in between.  This is slow and we hit this bug:

        https://bugs.webkit.org/show_bug.cgi?id=6148

        in the layout and rendering code where adjacent text nodes don't shape correctly in Arabic.
        
        This change creates a fast path for ReplaceSelectionCommand that inserts text directly into the
        text node that holds the selection (very similar to the fast path we wrote for InsertTextCommand).

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplaceSelectionCommand::doApply):
        (WebCore::ReplaceSelectionCommand::performTrivialReplace):
        * editing/ReplaceSelectionCommand.h:
        * editing/TextIterator.cpp:

2009-04-15  Adam Langley  <agl@google.com>

        Reviewed by Darin Fisher.

        Move VDMX parsing into the Chromium Linux port.

        https://bugs.webkit.org/show_bug.cgi?id=25116

        VDMX tables are optional tables in TrueType fonts which contain the
        exact pixel height of a given font at a given pel size. In order to
        match Windows font metrics we have to use these numbers.

        Previously, the parsing was performed in Skia. As part of the merge
        with upstream Skia, an interface for getting table data from a font
        has been added to Skia and we're moving the parsing into WebKit.

        This does not change any layout tests.

        * platform/graphics/chromium/FontPlatformDataLinux.cpp:
        (WebCore::FontPlatformData::uniqueID):
        * platform/graphics/chromium/FontPlatformDataLinux.h:
        * platform/graphics/chromium/FontTrueTypeLinux.cpp: Added.