@@ -1,3 +1,12 @@
+2009-04-15  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Anders Carlsson.
+
+        Remove support for the ObjCIvar extended attribute from the Objective-C
+        bindings generator.  It is not used anymore.
+
+        * bindings/scripts/CodeGeneratorObjC.pm:
+
 2009-04-15  Justin Garcia  <justin.garcia@apple.com>
 
         Reviewed by Dan Bernstein.
